--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 absl-py==1.1.0
-apex==0.1
+###apex==0.1
 attrs==22.1.0
 cachetools==5.2.0
 certifi==2022.5.18.1
@@ -60,7 +60,7 @@ sentencepiece==0.1.97
 seqeval==1.2.2
 six==1.16.0
 submitit==1.3.3
-tensorboard==2.9.1
+# tensorboard==2.9.1
 tensorboard-data-server==0.6.1
 tensorboard-logger==0.1.0
 tensorboard-plugin-wit==1.8.1
@@ -70,11 +70,11 @@ thop==0.1.1.post2209072238
 threadpoolctl==3.1.0
 timm==0.3.2
 tokenizers==0.12.1
-torch==1.8.1+cu111
-torchaudio==0.8.1
+# torch==1.8.1+cu111
+# torchaudio==0.8.1
 torchfile==0.1.0
 torchlars==0.1.2
-torchvision==0.9.1+cu111
+# torchvision==0.9.1+cu111
 tornado==6.2
 tqdm==4.64.1
 transformers==4.21.2
